--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,14 @@ services:
     ports:
       - '8080:8080'
   react:
-      build: ./react
-      tty: true
-      ports:
-        - 3000:3000
+    build: ./react
+    tty: true
+    ports:
+      - 3000:3000
+  db:
+    build: ./db
+    tty: true
+    volumes:
+      - ./db/data:/var/lib/mysql
+    ports:
+      - 3306:3306
