--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,15 @@ services:
   go:
     build: ./go
     tty: true
+    depends_on:
+      - db
     ports:
       - '8080:8080'
   react:
     build: ./react
     tty: true
+    volumes:
+      - ./react/app:/react/app
     ports:
       - 3000:3000
   db:
